Removed getting version from parent solution to avoid cascading changes when used in other projects

--- a/src/Masterloop.Core.Types/Masterloop.Core.Types.csproj
+++ b/src/Masterloop.Core.Types/Masterloop.Core.Types.csproj
@@ -21,6 +21,7 @@
     <Summary>Core data types library for Masterloop Cloud Services.</Summary>
     <Title>Masterloop.Core.Types</Title>
     <PackageId>Masterloop.Core.Types</PackageId>
+    <SynchReleaseVersion>false</SynchReleaseVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="NuGet.Build.Packaging" Version="0.2.0" />
