--- a/src/Masterloop.Core.Types/Masterloop.Core.Types.csproj
+++ b/src/Masterloop.Core.Types/Masterloop.Core.Types.csproj
@@ -13,10 +13,9 @@
     <PackageLicenseUrl>http://masterloop.azurewebsites.net/Licenses/masterloop-mit-license.txt</PackageLicenseUrl>
     <PackageIconUrl>http://masterloop.azurewebsites.net/Images/Masterloop_Symbol_Square_32x32.png</PackageIconUrl>
     <PackageTags>Masterloop Core Types .NET Standard Library</PackageTags>
-    <PackageReleaseNotes>Statistics data types.
-Command metadata.</PackageReleaseNotes>
-    <ReleaseVersion>6.0.0</ReleaseVersion>
-    <PackageVersion>6.0.0</PackageVersion>
+    <PackageReleaseNotes>Extended snapshot requests, Devicelets</PackageReleaseNotes>
+    <ReleaseVersion>6.2.0</ReleaseVersion>
+    <PackageVersion>6.2.0</PackageVersion>
     <DevelopmentDependency>true</DevelopmentDependency>
     <Owners>jhskailand</Owners>
     <Summary>Core data types library for Masterloop Cloud Services.</Summary>
