--- a/src/Masterloop.Core.Types/Masterloop.Core.Types.csproj
+++ b/src/Masterloop.Core.Types/Masterloop.Core.Types.csproj
@@ -38,5 +38,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Remove=".DS_Store" />
+    <None Remove="Units\" />
+    <None Remove="Units\Enum\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Units\" />
+    <Folder Include="Units\Enum\" />
   </ItemGroup>
 </Project>
